--- a/bib/quantum.bib
+++ b/bib/quantum.bib
@@ -2769,6 +2769,24 @@
     Url         =   {http://arxiv.org/abs/1511.02839},
 }
 
+@Misc{Spe15arxiv,
+    Title       =   {Instantaneous non-local computation of low {$T$-depth} quantum circuits},
+    Author      =   {Speelman, Florian},
+    Year        =   {2015},
+    Arxivid     =   {1511.02839},
+    Url         =   {http://arxiv.org/abs/1511.02839},
+}
+
+@InProceedings{Spel16,
+  author =	{Florian Speelman},
+  title =	{{Instantaneous Non-Local Computation of Low T-Depth Quantum Circuits}},
+  booktitle =	{11th Conference on the Theory of Quantum Computation, Communication and Cryptography (TQC 2016)},
+  pages =	{9:1--9:24},
+  year =	{2016},
+  volume =	{61},
+  doi =		{10.4230/LIPIcs.TQC.2016.9},
+}
+
 @InProceedings{SML10,
     Title       =   {The Case for Quantum Key Distribution},
     Author      =   {Douglas Stebila and Michele Mosca and Norbert L\"{u}tkenhaus},
@@ -4788,7 +4806,7 @@
 @InProceedings{Ji16,
     Title       =   {Classical verification of quantum proofs},
     Author      =   {Ji, Zhengfeng},
-    Year        =   {2016}, 
+    Year        =   {2016},
     Booktitle   =   stoc16,
     Pages       =   {885--898},
     DOI         =   {10.1145/2897518.2897634},
@@ -4797,7 +4815,7 @@
 @InProceedings{CM14,
     Title       =   {Complexity Classification of Local {H}amiltonian Problems},
     Author      =   {Cubitt, Tony S. and Montanaro, Ashley},
-    Year        =   {2014}, 
+    Year        =   {2014},
     Booktitle   =   focs14,
     Pages       =   {120--129},
     DOI         =   {10.1109/FOCS.2014.21},
@@ -4844,7 +4862,7 @@
 @Article{Wat09b,
     Title       =   {Zero-knowledge against quantum attacks},
     Author      =   {Watrous, John},
-    Year        =   {2009}, 
+    Year        =   {2009},
     Journal     =   siamjc,
     Volume      =   {39},
     Number      =   {1},
@@ -5011,7 +5029,7 @@
     Pages       =   {57--73},
     DOI         =   {10.1007/978-3-319-02937-5\_4},
 }
- 
+
 @InProceedings{JKPT12,
     Title       =   {Commitments and Efficient Zero-Knowledge Proofs from Learning Parity with Noise},
     Author      =   {Jain, Abhishek and Krenn, Stephan and Pietrzak, Krzysztof and Tentes, Aris},
@@ -5062,7 +5080,7 @@
 @InProceedings{FS87,
     Title       =   {How to Prove Yourself: Practical Solutions to Identification and Signature Problems},
     Author      =   {Fiat, Amos and Shamir, Adi},
-    Year        =   {1987},  
+    Year        =   {1987},
     Booktitle   =   crypto1986,
     Pages       =   {186--194},
     DOI         =   {10.1007/3-540-47721-7\_12},
@@ -5358,7 +5376,7 @@
 @Article{BDE+98,
     Title       =   {Optimal universal and state-dependent quantum cloning},
     Author      =   {Bru{\ss}, Dagmar and DiVincenzo, David P and Ekert, Artur and Fuchs, Christopher A and Macchiavello, Chiara and Smolin, John A},
-    Year        =   {1998}, 
+    Year        =   {1998},
     Journal     =   phyra,
     Volume      =   {57},
     Number      =   {4},
@@ -5506,7 +5524,7 @@
     Year        =   {2009},
     Journal     =   qic,
     Volume      =   {9},
-    Number      =   {1}, 
+    Number      =   {1},
     Pages       =   {81--89},
 }
 % 20191028-slord: qic does not give a url or doi to individual articles.
@@ -5646,7 +5664,7 @@
 @Inproceedings{Kar72,
     Title       =   {Reducibility among combinatorial problems},
     Author      =   {Karp, Richard M.},
-    Year        =   {1972}, 
+    Year        =   {1972},
     Booktitle   =   {Complexity of Computer Computations},
     Pages       =   {85--103},
     DOI         =   {10.1007/978-1-4684-2001-2\_9},
@@ -5905,7 +5923,7 @@
     Pages       =   {818--830},
     DOI         =   {10.1109/TCAD.2013.2244643},
 }
- 
+
 @Article{DMM16,
     Title       =   {Parallelizing quantum circuit synthesis},
     Author      =   {Di Matteo, Olivia and Mosca, Michele},
