--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -190,7 +190,7 @@ Since $C_{q_1}(\ket{\tau})=C_{q_2}(\ket{\tau})$ for every quantum state $\ket{\t
 \label{eq:1}
 \ket{\phi}_1=(I\otimes C_{q_1}) \ket{\beta^{2n}}=(I\otimes C_{q_2}) \ket{\beta^{2n}}=\ket{\phi}_2.
 \end{equation}
-Now all we need to show is that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2)$ are computationally indistinguishable against any polynomial-time quantum adversary. Note if we can  prove the following two properties concerning $C_1$ and $C_2$
+Now all we need to show is that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2)$ are computationally indistinguishable against any polynomial-time quantum adversary. Note if we can  prove the following two properties concerning $C_1$ and~$C_2$
 
 \begin{enumerate}
 \item[1)] $C_1$ and $C_2$ are equivalent circuits, \emph{i.e.}, they compute the same functionality
