--- a/BuildingQiO-non-clifford.tex
+++ b/BuildingQiO-non-clifford.tex
@@ -4,8 +4,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Obfuscating Beyond Clifford Circuits}
 \label{QiO:Clifford+T:family}
-\Anne{I think we need to work on the structure of this section, currently when reading quickly, it is hard to understand how the various pieces fit together}
-In the previous section we show how we can construct a $Qi\mathcal{O}$ for Clifford circuits from gate-teleportation and $i\mathcal{O}.$ In this section, we extend the gate teleportation technique to show how we can construct $Qi\mathcal{O}$ for any quantum circuit that has at most logarithmic non-Clifford-gates in the circuit size.  We start by constructing a $Qi\mathcal{O}$ for any 1-qubit quantum circuit (\cref{QiO:Clifford+T:family+GT}), then in \Cref{sec:n-qubit-circuits}  we extend the 1-qubit construction to any $n$-qubit quantum circuit that has at most logarithmic  $\tgate$ gates in the circuit size.\footnote{Recall from  \Cref{defn:Clifford+T:family} that adding a non-Clifford gate  such as $\tgate$ gate to Clifford gates gives us a generating set for all unitary quantum circuits.}
+In the previous section, we showed how we can construct a $Qi\mathcal{O}$ for Clifford circuits from gate-teleportation and $i\mathcal{O}.$ In this section, we extend the gate teleportation technique to show how we can construct $Qi\mathcal{O}$ for any quantum circuit that has at most logarithmic non-Clifford-gates in the circuit size.  We start by constructing a $Qi\mathcal{O}$ for any 1-qubit quantum circuit (\cref{QiO:Clifford+T:family+GT}), then in \Cref{sec:n-qubit-circuits}  we extend the 1-qubit construction to any $n$-qubit quantum circuit that has at most a logarithmic number of  $\tgate$-gates in the circuit size.\footnote{Recall from  \Cref{defn:Clifford+T:family} that adding a non-Clifford gate  such as $\tgate$-gate to Clifford gates gives us a generating set for all unitary quantum circuits.}
 
 
 
@@ -16,7 +15,7 @@ In this section we show how we can obfuscate any 1-qubit unitary circuit using g
 \label{eq:pgate}
 \tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\pgate^b \tgate.
 \end{equation}
-If $b=0,$ then we don't have to worry about $\pgate$ gate otherwise we have to perform a $\pgate$ correction. This is undesirable as $\pgate$ does not commute with $\xgate,$ making the update function complicated. Note we can write $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate,$ therefore  \Cref{eq:pgate} can be rewritten as,
+If $b=0,$ then we don't have to worry about $\pgate$ gates; otherwise we have to perform a $\pgate$ correction. This is undesirable as $\pgate$ does not commute with $\xgate,$ making the update function complicated. Note we can write $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate,$ therefore  \Cref{eq:pgate} can be rewritten as,
 
 \begin{equation}
 \label{eq:pgate1}
@@ -31,7 +30,7 @@ Note  $\left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\zgat
 \end{aligned}
 \end{equation}
 
-Since $a,b\in\{0,1\}$ there only four possible combinations ($a=b=0$, $a=b=1$, $a=1,b=0$ and $a=0,b=1).$ This mean we can be express  \cref{eq:pgate2} as a linear combination of $\{\igate, \xgate, \zgate, \xgate \zgate\},$
+Since $a,b\in\{0,1\}$ there are only four possible combinations. This mean that we can be express \Cref{eq:pgate2} as a linear combination of $\{\igate, \xgate, \zgate, \xgate \zgate\},$
 
 \begin{equation}
 \label{eq:pgate3}
@@ -39,21 +38,21 @@ Since $a,b\in\{0,1\}$ there only four possible combinations ($a=b=0$, $a=b=1$, $
 \tgate \xgate^b \zgate^a= (\alpha_0 \igate +  \alpha_1 \xgate + \alpha_2 \zgate + \alpha_3 \xgate\zgate)\tgate \\
 \end{aligned}
 \end{equation}
-where $\alpha_i \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\},$ for  $i\in[4].$ The \Cref{eq:pgate3} is important as we will see that the correction unitary for any 1-qubit circuit can be expressed in this form.
+where $\alpha_j \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\},$ for  $j\in[4]$. \Cref{eq:pgate3} is important as we will see that the correction unitary for any 1-qubit circuit can be expressed in this form.
 
 \subsection{Single-Qubit Circuits}
 \label{sec:1-qubit}
 
-Let $C_q$ be a $1$-qubit circuit we want to obfuscate and $\ket{\psi}$ is the quantum state on which we want to evaluate $C_q.$ Note we can write any $1$-qubit circuit as a sequence of gates from the set $\{\hgate, \tgate\}$ \footnote{The set $\{\hgate,  \tgate\}$ is universal for 1-qubit unitary \cite{KLM07}.}
+Let $C_q$ be a $1$-qubit circuit we want to obfuscate and $\ket{\psi}$ be the quantum state on which we want to evaluate $C_q.$ Note we can write any $1$-qubit circuit as a sequence of gates from the set $\{\hgate, \tgate\}$ \footnote{The set $\{\hgate,  \tgate\}$ is universal for 1-qubit unitary \cite{KLM07}.}
 
 $$C_q=(g_{|C_q|},\ldots,g_2,g_1 ),\; g_i\in\{\hgate, \tgate\}$$
-Recall that in gate-teleportation construction for Clifford circuits we are left with a subsystem of the form $C_q \xgate^b\zgate^a (\ket{\psi})$ (\Cref{Eval:Clifford-teleportation}, algorithm 4, step 3)
+Recall that in the gate-teleportation construction for Clifford circuits, we are left with a subsystem of the form $C_q \xgate^b\zgate^a (\ket{\psi})$ (\Cref{Eval:Clifford-teleportation}, algorithm 4, step 3)
 
 \begin{equation}
 \label{eq:pgate4}
 C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2,g_1 )\xgate^b\zgate^a (\ket{\psi}),
 \end{equation}
-and to evaluate the circuit on $\ket{\psi}$ we have to apply a correction unitary. We can write the system in \ref{eq:pgate4} as
+and to evaluate the circuit on $\ket{\psi}$, we have to apply a correction unitary. We can write the system in \Cref{eq:pgate4} as
 
 \begin{equation}
 \begin{aligned}
@@ -61,7 +60,7 @@ and to evaluate the circuit on $\ket{\psi}$ we have to apply a correction unitar
 C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2)(\alpha_0 \igate +  \alpha_1 \xgate + \alpha_2 \zgate + \alpha_3 \xgate \zgate)g_1 (\ket{\psi})
 \end{aligned}
 \end{equation}
- where $\alpha_i \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\}.$ We can write the  \Cref{eq:pgate5}  as a conditional equation based on if $g_2=\tgate$ or $g_2=\hgate.$
+ where $\alpha_i \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\}.$ We can write  \Cref{eq:pgate5}  as a conditional equation based on if $g_2=\tgate$ or $g_2=\hgate.$
 
  \begin{equation}
   C_q \xgate^b\zgate^a (\ket{\psi})=
@@ -70,10 +69,9 @@ C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2)(\alpha_0 \igate +  \alp
  (g_{|C_q|},\ldots,g_3)(\alpha_0 \igate +  \alpha_1 \zgate + \alpha_2^\prime \xgate + \alpha_3^\prime \xgate \zgate)g_2g_1 (\ket{\psi}), & \text{if } g_2=\hgate\\
 \end{cases}
 \end{equation}
+where $\alpha_2^\prime=\alpha_2(1-i)/2+\alpha_3(1+i)/2$ and $\alpha_3^\prime=\alpha_3(1-i)/2+\alpha_2(1+i)/2$ for $i\in[4].$ Note that in the expression above, the coefficients may change if $g_2$ happens to be a $\tgate$-gate;  whereas if $g_2$ is an $\hgate$-gate then the size of the coefficients remains unaffected. Moreover, applying any number of gates to a system as in  \Cref{eq:pgate3} cannot increase the number of terms, \emph{i.e.}, the number of terms in the summation remains at most~4. However, the size of coefficients $\alpha_i$ can be changed with each application of a $\tgate$-gate.
 
-where $\alpha_2^\prime=\alpha_2(1-i)/2+\alpha_3(1+i)/2$ and $\alpha_3^\prime=\alpha_3(1-i)/2+\alpha_2(1+i)/2$ for $i\in[4].$ Note that in the expression above the coefficients may change if $g_2$ happens to be a $\tgate$ gate;  whereas if $g_2$ is an $\hgate$-gate then the size of coefficients remains unaffected. Moreover, applying any number of gates to a system of form \ref{eq:pgate3} cannot increase the number of terms, i.e. the number of terms in the summation remain at most 4. However, the size of coefficients $\alpha_i$ can be changed with each application of a $\tgate$ gate.
-
-Hence, it follows that by applying the remaining  sequence of gates $(g_{|C_q|},\ldots,g_3)$, the system \ref{eq:pgate5} can be written as
+Hence, it follows that by applying the remaining  sequence of gates $(g_{|C_q|},\ldots,g_3)$, the \Cref{eq:pgate5} can be written as
 \begin{equation}
 \begin{aligned}
 \label{eq:pgate8}
@@ -82,24 +80,25 @@ C_q \xgate^b\zgate^a (\ket{\psi})=(\beta_0 \igate +  \beta_1 \xgate + \beta_2 \z
 \end{equation}
 where $\beta_i  \in \mathbb{C},$ $i\in[4].$  Therefore, for any  $1$-qubit circuit $C_q,$ the correction unitary can be written as
 
+\Anne{above is a lot of fluff to say that the Paulis form a basis!}
 \begin{equation}
 \label{eq:pgate9}
  (\beta_0 \igate +   \beta_1 \xgate +  \beta_2 \zgate +  \beta_3 \xgate\zgate), \mbox{ for }  \beta_i \in \mathbb{C},\; i\in[n]
 \end{equation}
 
-Moreover, the size of the coefficients $\beta_i$'s grows at most a polynomial in the number of $\tgate$ gates. This is discussed in (\Cref{coeff:size}). Therefore the update function for any $1$-qubit circuit $C_q$ can be defined as a following map,
+Moreover, the size of the coefficients $\beta_i$'s grows at most a polynomial in the number of $\tgate$-gates. This is discussed in (\Cref{coeff:size}). Therefore the update function for any $1$-qubit circuit $C_q$ can be defined as a following map,
 
 \begin{equation*}
 F_{C_q}:\{0,1\}^2\rightarrow \mathbb{C}^4,\; (a,b)\mapsto (\beta_0, \beta_1,\beta_2,\beta_3),
 \end{equation*}
 which corresponds to the correction unitary $(\beta_0 \igate +  \beta_1 \xgate + \beta_2 \zgate + \beta_3\xgate \zgate).$
-Moreover, the update functions for any two equivalent 1-qubit circuit are equivalent (see Lemma \Cref{lemma:1qubit}). Therefore, we can obfuscate any 1-qubit circuit using gate teleportation and a quantum secure $i\mathcal{O}$ as we did for the Clifford circuits (\Cref{sec:Clifford-iO-teleportaion}). The proof is nearly identical to the gate teleportation based Clifford construction (\Cref{sec:Clifford-iO-teleportaion}).
-
+Moreover, the update functions for any two equivalent 1-qubit circuit are equivalent (see \Cref{lemma:1qubit}). Therefore, we can obfuscate any 1-qubit circuit using gate teleportation and a quantum secure $i\mathcal{O}$ as we did for the Clifford circuits (\Cref{sec:Clifford-iO-teleportaion}). The proof is nearly identical to the gate teleportation based Clifford construction (\Cref{sec:Clifford-iO-teleportaion}).
+\Anne{Need to introduce next Lemma. Is the above sentence doing this? If so, be more direct.}
 
 
 \begin{lemma}
 \label{lemma:1qubit}
-Let $C_{q_1}$ and $C_{q_2}$ be two equivalent 1-qubit circuits and
+Let $C_{q_1}$ and $C_{q_2}$ be two equivalent 1-qubit circuits and suppose
 \begin{equation*}
 F_{C_q}:\{0,1\}^2\rightarrow \mathbb{C}^4 \mbox{ and } F_{C_q^\prime}:\{0,1\}^2\rightarrow \mathbb{C}^4
 \end{equation*}
@@ -116,7 +115,7 @@ Let $C_1$ and $C_2$ be circuits that compute $F_{C_{q_1}}$ and $F_{C_{q_2}},$ th
 C_1(a,b)=(\beta_0, \beta_1, \beta_2 , \beta_3)\neq (\beta_0^\prime, \beta_1^\prime, \beta_2^\prime , \beta_3^\prime)=C_2(a,b)
 \end{equation*}
 
-Suppose we want to evaluated circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using gate teleportaton (\Cref{protocol: gate-teleportation}). And further assume that the classical output of the Bell measurement for both circuits is  $(a,b)$ (\Cref{protocol: gate-teleportation}, step 4). After step 5 of  gate teleportation protocol ( \Cref{protocol: gate-teleportation}) we are left with systems \Cref{lemma:1qubit:eq1} and \Cref{lemma:1qubit:eq2}
+Suppose we want to evaluate circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using gate teleportaton (\Cref{protocol: gate-teleportation}). And further assume that the classical output of the Bell measurement for both circuits is  $(a,b)$ (\Cref{protocol: gate-teleportation}, step~4). After step~5 of  gate teleportation protocol (\Cref{protocol: gate-teleportation}) we are left with  \Cref{lemma:1qubit:eq1} and \Cref{lemma:1qubit:eq2}
 \begin{equation}
 \label{lemma:1qubit:eq1}
 \begin{aligned}
@@ -162,9 +161,11 @@ The equation \Cref{lemma:1qubit:eq5},  can only be satisfied if $\beta_i = \beta
 
 
 
-\subsection{$Qi\mathcal{O}$ via Gate Teleportation for all Quantum Circuits with Low $\tgate$ gate Complexity }
+\subsection{$Qi\mathcal{O}$ via Gate Teleportation for all Quantum Circuits with Low $\tgate$-gate Complexity }
 \label{sec:n-qubit-circuits}
-In this section we construct a $Qi\mathcal{O}$ for all quantum circuits where the number of $\tgate$ gates is at most logarithmic in the circuit size. The construction is very similar to the gate teleportation for Clifford circuits (\Cref{sec:Clifford-iO-teleportation}). The reason for this bound is that the update function blows up once number of $\tgate$ gates are greater than logarithmic in circuit size. More, precisely the update function for any $n$-qubit quantum circuit $C_q$ with $k$ number of $\tgate$ gates can be defined as the following map. \footnote{It is discussed below why this map is defined conditionally on $k\leq n$ and $k>n$.}
+In this section, we construct a $Qi\mathcal{O}$ for all quantum circuits where the number of $\tgate$-gates is at most logarithmic in the circuit size. The construction is very similar to the gate teleportation for Clifford circuits (\Cref{sec:Clifford-iO-teleportaion}). The reason for this bound is that the update function blows up once the number of $\tgate$-gates is greater than logarithmic in the circuit size. More, precisely the update function for any $n$-qubit quantum circuit $C_q$ with $k$ $\tgate$-gates can be defined as the following map. \footnote{It is discussed below why this map is defined conditionally on $k\leq n$ and $k>n$.}
+
+\Anne{lots of notation going on here... not sure about $\bf s$, among other things. }
 
 \begin{equation}
 \label{nqubit:eq0}
@@ -180,25 +181,27 @@ In this section we construct a $Qi\mathcal{O}$ for all quantum circuits where th
 \begin{aligned}
  (a_1,b_1,\ldots, a_n,b_n) \mapsto \left((\beta_1, {\bf s}_1),\dots, (\beta_{4^k}, {\bf s}_{4^k}))\right).
 \end{aligned}
-\end{equation}      
-where  ${\bf B}=\{0,1\}^{2n}.$ 
+\end{equation}
+where  ${\bf B}=\{0,1\}^{2n}.$
 
 Therefore, we must have $k\in O(\log(|C_q|)).$ Note that the above map corresponds to the correction unitary \Cref{exp:nqubit-correction}
+
+
 
  \begin{equation}
 \label{exp:nqubit-correction}
 \sum_{i=1}^{4^k} \beta_i \xgate^{b_{i_1}} \zgate^{a_{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a_{i_n}},\;  \; k\leq n.
 \end{equation}
-where $\beta_i\in\mathbb{C}$ and ${\bf s}_i=a_{i_1}b_{i_1}, \ldots, a_{i_n}b_{i_n} \in\{0,1\}^{2n}.$  Note that there are at most $2^{2n}$ bit strings of size $2n,$ therefore it follows from \Cref{exp:nqubit-correction} that for any $n$-qubit circuit the correction unitary can be written as a summation of at most $2^{2n}$ terms. Note that the range of the update function increases exponentially in the number of $\tgate$ gates for $k\leq n$ but if $k>n$ then the range of update function becomes fixed and no longer depends on $k$ (see \Cref{nqubit:eq0}). However, it is important to realize that the sizes of coefficients $\beta_i$'s (\Cref{nqubit:eq0}) can be increased with each application of a $\tgate$ gate.
+where $\beta_i\in\mathbb{C}$ and ${\bf s}_i=a_{i_1}b_{i_1}, \ldots, a_{i_n}b_{i_n} \in\{0,1\}^{2n}.$  Note that there are at most $2^{2n}$ bit strings of size $2n,$ therefore it follows from \Cref{exp:nqubit-correction} that for any $n$-qubit circuit the correction unitary can be written as a summation of at most $2^{2n}$ terms. Note that the range of the update function increases exponentially in the number of $\tgate$-gates for $k\leq n$ but if $k>n$ then the range of update function becomes fixed and no longer depends on $k$ (see \Cref{nqubit:eq0}). However, it is important to realize that the sizes of coefficients $\beta_i$'s (\Cref{nqubit:eq0}) can be increased with each application of a $\tgate$-gate.
 
 \subsection{Worst-Case Correction Unitary}
-Let $C_q$ be an $n$-qubit circuit and $\ket{\psi}$ be an $n$-qubit state. If we want to evaluate $C_q$ on the state $\ket{\psi}$ using gate teleportation, then we are required to compute a correction unitary $U^\prime$ corresponding to $C_q$ (\Cref{protocol: gate-teleportation}) satisfying \Cref{nqubit:eq6}. We will show that in the worst-case the correction unitary is of form \Cref{exp:nqubit-correction}.
+Let $C_q$ be an $n$-qubit circuit and $\ket{\psi}$ be an $n$-qubit state. If we want to evaluate $C_q$ on the state $\ket{\psi}$ using gate teleportation, then we are required to compute a correction unitary $U^\prime$ corresponding to $C_q$ (\Cref{protocol: gate-teleportation}) satisfying \Cref{nqubit:eq6}. We will show that in the worst-case the correction unitary is of the form \Cref{exp:nqubit-correction}. \Anne{not sure what is the purpose of the Equation below.}
 \begin{equation}
 \label{nqubit:eq6}
-C_qU(\ket{\psi})= U^\prime C_q (\xgate^{a_{1}}\zgate^{b_{1}}\otimes \xgate^{a_{2}}\zgate^{b_{2}}\cdots \otimes \xgate^{a_{n}}\zgate^{b_{n}})(\ket{\psi}).
+C_qU(\ket{\psi})= U^\prime C_q (\xgate^{a_{1}}\zgate^{b_{1}}\otimes \xgate^{a_{2}}\zgate^{b_{2}}\otimes \cdots \otimes \xgate^{a_{n}}\zgate^{b_{n}})(\ket{\psi}).
 \end{equation}
 
-Let's construct $U^\prime$ and estimate how big it can grow. Suppose there are $k\leq n$ number of $\tgate$ gates in $C_q$ for some non-negative integer $k\leq n.$ To simplify the analysis we assume that $\tgate$ gates are in the first $l$ wires of $C_q,$ and all of $\cnot$ gates are acted after all the $\tgate$ gates \footnote{This restriction will not not affect our analysis see remark \cref{remark:nqubit-correction1}.} Note we must have $l\leq k.$ Then for every $j$-th wire with $\tgate$ gate(s)
+Let us construct $U^\prime$ and estimate how big it can grow. Suppose there are $k\leq n$ number of $\tgate$ gates in $C_q$ for some non-negative integer $k\leq n.$ To simplify the analysis we assume that $\tgate$-gates are in the first $l$ wires of $C_q,$ and all of $\cnot$ gates are acted after all the $\tgate$-gates \footnote{This restriction will not not affect our analysis see remark \cref{remark:nqubit-correction1}.} Note we must have $l\leq k.$ Then for every $j$-th wire with $\tgate$-gate(s)
 
 \begin{equation}
 \begin{aligned}
@@ -225,11 +228,11 @@ C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}=\left(\sum_{j=1}^{4^l} \b
  =\left(\sum_{j=1}^{4^{l}} \beta_j \xgate^{b_{j1}^\prime}\zgate^{a_{j1}^\prime} \otimes \cdots \otimes\xgate^{b_{jl}^\prime}\zgate^{a_{jl}^\prime} \otimes \xgate^{a_{l+1}^\prime}\zgate^{b_{l+1}^\prime}  \otimes \cdots   \otimes\xgate^{a_{n}^\prime}\zgate^{b_{n}^\prime}\right)
  \end{aligned}
 \end{equation}
-where $\beta_j\in \mathbb{C}$ for $j\in[4^l].$  Recall that $k$ denotes the number of $\tgate$ gates and $l\leq k\leq n,$ therefore in the worst case the correction unitary can have $4^k$ terms.
+where $\beta_j\in \mathbb{C}$ for $j\in[4^l].$  Recall that $k$ denotes the number of $\tgate$-gates and $l\leq k\leq n,$ therefore in the worst case the correction unitary can have $4^k$ terms.
 
 
 
-Therefore, we define an update function for any $n$-quantum circuit $C_q$ with $k\leq n\leq |C_q|$ number of $\tgate$ gates as a map.
+Therefore, we define an update function for any $n$-quantum circuit $C_q$ with $k\leq n\leq |C_q|$ number of $\tgate$-gates as a map.
 \begin{equation}
 \label{nqubit:eq10}
 \begin{aligned}
@@ -240,7 +243,7 @@ Therefore, we define an update function for any $n$-quantum circuit $C_q$ with $
 Which corresponds to the correction unitary defined in \Cref{exp:nqubit-correction}.
 \subsection{Remark}
 \label{remark:nqubit-correction1}
-Note the restriction that $\tgate$ gates are in the first $l$ wires of the circuit has no affect on our analysis. This is because, any permutation of the wires in the circuit will give us $\ell$ terms of form $\sum_{i=1}^4 \lambda_{j_i} \xgate^{a_{j_i}^\prime} \zgate^{b_{j_i}^\prime}$ and $n-l$ terms of the form $\xgate^{a_{i}^\prime} \zgate^{b_{i}^\prime}.$  And the tensor product of these terms in any order will result into a unitary in the worst-case of form. Moreover, $\cnot$ does not increase the number of terms in the update function or affect the size of the coefficients. So our worst-case analysis is not affected by this restriction.
+Note the restriction that $\tgate$-gates are in the first $l$ wires of the circuit has no affect on our analysis. This is because, any permutation of the wires in the circuit will give us $\ell$ terms of form $\sum_{i=1}^4 \lambda_{j_i} \xgate^{a_{j_i}^\prime} \zgate^{b_{j_i}^\prime}$ and $n-l$ terms of the form $\xgate^{a_{i}^\prime} \zgate^{b_{i}^\prime}.$  And the tensor product of these terms in any order will result into a unitary in the worst-case of form. Moreover, $\cnot$ does not increase the number of terms in the update function or affect the size of the coefficients. So our worst-case analysis is not affected by this restriction.
 
 
 \subsection{$Qi\mathcal{O}$ for Unitary Quantum Circuits with Low $\tgate$ gate Complexity}
@@ -255,16 +258,16 @@ The $Qi\mathcal{O}$ construction and proof of its security is identical to the  
 %\label{nqubit-correction-final}
 %\sum_{i=1}^{4^k} \beta_i \xgate^{b{i_1}} \zgate^{a{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a{i_n}},\; \beta_i\in\mathbb{C},\; a_{i_j},b_{i_j}\in\{0,1\}.
 %\end{equation}
-%Therefore, if $k\in O(\log(|C_q|)$ (where $k$ is the $\tgate$ count), then the number of terms in the correction unitary \Cref{nqubit-correction-final} are in $O(|C_q|).$
+%Therefore, if $k\in O(\log(|C_q|)$ (where $k$ is the $\tgate$-count), then the number of terms in the correction unitary \Cref{nqubit-correction-final} are in $O(|C_q|).$
 
 
 
 %\begin{remark}
 %\label{remark:nqubit-correction2}
-%Note for any $n$-qubit circuit the correction unitary (relation \Cref{nqubit-correction-final} can have at most $2^{2n}$ terms, regardless how many $\tgate$ gates a circuit has. To realize this suppose we have
+%Note for any $n$-qubit circuit the correction unitary (relation \Cref{nqubit-correction-final} can have at most $2^{2n}$ terms, regardless how many $\tgate$-gates a circuit has. To realize this suppose we have
 %$$C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}=\left(\sum_{j=0}^{l} \beta_j \xgate^{b_{j1}}\zgate^{a_{j1}} \otimes \cdots \otimes\xgate^{b_{jl}}\zgate^{a_{jl}} \otimes \xgate^{a_{l+1}^\prime}\zgate^{b_{l+1}^\prime}  \otimes \cdots   \otimes\xgate^{a_{n}^\prime}\zgate^{b_{n}^\prime}\right)$$
 %for some integer $l>2^{2n}.$
-%But since, there are at most $2^{2n}$ bit strings of size $2n,$ by pigeon hole principle we must have at least $2n-l$ terms that have common binary strings and by adding these common terms we are guaranteed to have every unitary that has at most $2^{2n}$ terms. This means that if the number of terms in the correction unitary grows exponentially (in the worst-case) in the number of $\tgate$ gates $k$ as far as $k\geq n.$ Note the size of the coefficients $\beta_i$ is a function of $\tgate$ gates and will be affected as number of $\tgate$ gates increases. So if there are exponentially many $\tgate$ gates then the size of the $\beta_i$ can also also grow exponentially.
+%But since, there are at most $2^{2n}$ bit strings of size $2n,$ by pigeon hole principle we must have at least $2n-l$ terms that have common binary strings and by adding these common terms we are guaranteed to have every unitary that has at most $2^{2n}$ terms. This means that if the number of terms in the correction unitary grows exponentially (in the worst-case) in the number of $\tgate$-gates $k$ as far as $k\geq n.$ Note the size of the coefficients $\beta_i$ is a function of $\tgate$-gates and will be affected as number of $\tgate$-gates increases. So if there are exponentially many $\tgate$-gates then the size of the $\beta_i$ can also also grow exponentially.
 %\end{remark}
 
 %
@@ -303,7 +306,7 @@ The $Qi\mathcal{O}$ construction and proof of its security is identical to the  
 Let $C_{q_1}$ and $C_{q_2}$ be two equivalent $n$-qubit circuits  and $k\leq n$
 \begin{equation*}
  F_{C_{q_1}}:\{0,1\}^{2n}\longrightarrow  (\mathbb{C} \times {\bf B})^{4^k} \mbox{ and }
-  F_{C_{q_2}}:\{0,1\}^{2n}\longrightarrow  (\mathbb{C} \times {\bf B})^{4^k}. 
+  F_{C_{q_2}}:\{0,1\}^{2n}\longrightarrow  (\mathbb{C} \times {\bf B})^{4^k}.
 \end{equation*}
 are the corresponding update functions for $C_{q_1}$ and $C_{q_2}$  then $F_{C_{q_1}}=F_{C_{q_2}},$ where ${\bf B}=\{0,1\}^{2n}$
 \end{lemma}
@@ -334,10 +337,10 @@ C_{q_1} (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}\ket{\psi}=C_{q_2} (\x
 Using the circuits for the update functions \ref{fun:assumption2} we can rewrite \Cref{nqubit:eq10} as
 \begin{equation}
  \label{nqubit:eq11}
-\sum_{i=1}^{4^k} \beta_i \xgate^{b_{i_1}} \zgate^{a_{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a_{i_n}}C_{q_1}\ket{\psi}=\sum_{i=1}^{4^k} \beta_i \xgate^{b_{i_1}^\prime} \zgate^{a_{i_1}^\prime}\otimes \cdots \otimes \xgate^{b{i_n}^\prime} 
+\sum_{i=1}^{4^k} \beta_i \xgate^{b_{i_1}} \zgate^{a_{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a_{i_n}}C_{q_1}\ket{\psi}=\sum_{i=1}^{4^k} \beta_i \xgate^{b_{i_1}^\prime} \zgate^{a_{i_1}^\prime}\otimes \cdots \otimes \xgate^{b{i_n}^\prime}
 \end{equation}
 
-Therefore, we have 
+Therefore, we have
 \begin{equation}
 \label{nqubit:eq12}
 \begin{aligned}
@@ -363,11 +366,11 @@ From \Cref{nqubit:eq14} we can conclude that $(\beta_i, {\bf s}_i)=(\beta_i^\pri
 We have to show that the update function can be computed by a polynomially size classical circuit. Let $C_q $ be an $n$-qubit circuit  with $k\in O(\log(|C_q|)).$
 \begin{equation*}
 F_{C_q}(s)=((\beta_1, {\bf s}_1),\ldots, (\beta_k, {\bf s}_k)),\; \mbox{for } s\in\{0,1\}^{2n}.
- \end{equation*}  
- 
-Each $\beta_i \in poly(|C_q|)$ (\Cref{coeff:size}) and $|{\bf s}_i|=2n,$ but $n\leq |C_q|,$ therefore ${\bf s}_i \in O(|C_q|).$  Therefore the size of each pair $(\beta_i, {\bf s}_i)$ is in $O(poly|C_q|)$ and there are only $\log(|C_q|)$ pairs.
- Moreover,  the size of $\beta_i \in poly(|C_q|)$ ( \Cref{coeff:size}). So the size of the function is polynomial. To compute $F_{C_q}$ we go gate by gate in $C_q$ and perform operations such as $\oplus$, swaps, $+$ and $\times$ on operand of size that are bounded by $poly(|C_q|).$ There are $|C_q|$ gates we have to go through and each require at most $poly(|C_q|)$ 
-operations.Therefore, $F_{C_q}$ can be computed with $poly(|C_q|)$ size classical circuit. 
+ \end{equation*}
+
+Each $\beta_i \in poly(|C_q|)$ (appendix \Cref{coeff:size}) and $|{\bf s}_i|=2n,$ but $n\leq |C_q|,$ therefore ${\bf s}_i \in O(|C_q|).$  Therefore the size of each pair $(\beta_i, {\bf s}_i)$ is in $O(poly|C_q|)$ and there are only $\log(|C_q|)$ pairs.
+ Moreover,  the size of $\beta_i \in poly(|C_q|)$ (appendix \Cref{coeff:size}). So the size of the function is polynomial. To compute $F_{C_q}$ we go gate by gate in $C_q$ and perform operations such as $\oplus$, swaps, $+$ and $\times$ on operand of size that are bounded by $poly(|C_q|).$ There are $|C_q|$ gates we have to go through and each require at most $poly(|C_q|)$
+operations.Therefore, $F_{C_q}$ can be computed with $poly(|C_q|)$ size classical circuit.
 
 
 
