--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 
 \begin{abstract}
 An \emph{indistiguishability obfuscator} is a probabilistic polynomial-time algorithm that takes a circuit as input
-and outputs a new circuit  that has the same functionality as the input circuit, such that  for any two circuits of the same size that compute the \emph{same} function, the outputs of the indistinguishability obfuscator are computationally indistinguishable. Here, we study indistinguishability obfuscation for \emph{quantum} circuits. We construct an indistinguishability  obfuscator that takes as input a quantum circuit and outputs a quantum state together with a quantum circuit, which together can be used to evaluate the original quantum circuit on any quantum input; the security guarantee being that for two quantum circuits of the same size that have the same input-output behaviour, the outputs of the obfuscator are indistinguishable. In our construction, the size of the output of the obfuscator is exponential in the number of non-Clifford (\tgate gates), which means that the construction is efficient as long as the number of $\tgate$-gates  is logarithmic in the circuit size.
+and outputs a new circuit  that has the same functionality as the input circuit, such that  for any two circuits of the same size that compute the \emph{same} function, the outputs of the indistinguishability obfuscator are computationally indistinguishable. Here, we study indistinguishability obfuscation for \emph{quantum} circuits. We construct an indistinguishability  obfuscator that takes as input a quantum circuit and outputs a quantum state together with a quantum circuit, which together can be used to evaluate the original quantum circuit on any quantum input; the security guarantee being that for two quantum circuits of the same size that have the same input-output behaviour, the outputs of the obfuscator are computationally indistinguishable. In our construction, the size of the output of the obfuscator is exponential in the number of non-Clifford (\tgate gates), which means that the construction is efficient as long as the number of $\tgate$-gates  is logarithmic in the circuit size.
 \end{abstract}
 
 \newpage
