--- a/commands.tex
+++ b/commands.tex
@@ -1,5 +1,5 @@
 \newif\ifSUBMISSION
-\SUBMISSIONfalse
+\SUBMISSIONtrue
 
 \ifSUBMISSION
 \newcommand{\rnote}[1]{\textcolor{olive}{\small (Raza: #1)}}
