--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=blue]{hyperref}
 \usepackage[nameinlink,capitalise]{cleveref}
 %\usepackage{cleveref}
+%\usepackage[nottoc,numbib]{tocbibind}   %Refrences in TOC
 \floatname{algorithm}{Algorithm}
 
 %********************
@@ -103,7 +104,7 @@ This material is based upon work supported by the Air Force Office of Scientific
 \input{Appendix.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\addcontentsline{toc}{section}{References}
 \bibliographystyle{bst/alphaarxiv}
 %\bibliography{bib/full,bib/quantum,bib/more}
 \bibliography{bib/full,bib/quantum}
